# social-network

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  Dockerfile.prod  Readme.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  fault_tolerance_test.py  main.py  pyproject.toml  setup-replication.bat  setup-replication.sh
alembic/: env.py
alembic/versions/: 10c79971c2a5_create_users_table.py  15b5a605027f_create_friends_table.py  64e164614d85_create_posts_table.py
app/: logger.py  settings.py
app/controllers/: __init__.py  auth_controller.py  messages_controller.py  user_controller.py  websocket_controller.py
app/core/: database.py  db_manager.py  dependencies.py  exception_handlers.py  exceptions.py  jwt_token.py  messages_client.py  rabbitmq_client.py  redis_client.py  security.py  websocket_manager.py
app/middleware/: request_id.py
app/models/: __init__.py  enums.py  friend.py  post.py  user.py
app/repositories/: user_repository.py
app/resources/: strings.py
app/schemas/: auth.py  post.py  user.py
app/services/: auth_service.py  cache_service.py  feed_worker.py  user_service.py
haproxy/: haproxy.cfg
hw/hw2/: HW2.md  worksql.sql
hw/hw3/: HW3.md  check_replication.sql  check_transactions.sql  get_master_status.sql  promote_slave1.sql  switch_slave2.sql  text
hw/hw4/: HW4.md  sql_insert.pgsql
master-db-config/: pg_hba.conf  postgresql.conf
nginx/: nginx.conf
postman/: Social_Network_API.postman_collection.json
scripts/: failover_test.py  fill_test_data.py  promote_slave.py
tests/: test_bulk_insert.py
(+2 files in other folders)
