[project]
name = "social-network"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.4.3",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "email-validator>=2.3.0",
    "faker>=37.8.0",
    "fastapi>=0.116.1",
    "httpx>=0.27.0",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
]
